# nova

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.swp  .pre-commit-config.yaml  Dockerfile  Jupyter Notebook Technical offer, Lot 1 TO 2.ipynb  README.md  Untitled.ipynb  _pyproject.toml  _version.py  asv.conf.json  biotset.py  build.py  doc  environment.yml  fenics.yml  fenicsx  fenicsx.yml  mapdl.yml  mast.py  mypy.ini  nova.yml  pulsedesign.py.lprof  pyproject.toml  pytest.ini  requirements.txt  requirements_full.txt  results.xml  setup.cfg  setup.py  startup.py  sultanpostprocess.py  tox.ini  versioneer.py
.asv/results/: benchmarks.json
.pylint.d/: nova.electromagnetic.coilset1.stats
.virtual_documents/: Jupyter Notebook Technical offer, Lot 1 TO 2.ipynb
apps/: README.md
apps/pulsedesign/: .README.md.swp  __init__.py  config.py  main.py  simulator.py  theme.yaml
benchmarks/: biotoperate.py  framesetloc.py  framespace.py  locindexer.py  test_biotoperate.py
data/Ansys/: .gitignore  IVC_plasma_model.mac
data/Assembly/: .gitignore  F4E_vgap.txt  Gap_Size_18_Coils.txt  TFC18_assembly_trial_gaps.txt  cak_gap.txt  constant_adaptive_fourier.txt  constant_ssat_fourier_shift.txt  displace.nc  overlap.nc  vault.nc  w1.json  w2.json  w3.json  w4.json  w5.json
data/Twente/: twentepost.h5  twentesource.h5
docker/: Dockerfile  docker_run  iter-ci.sh  nova.yml  nova_py39.yml
docs/source/: conf.py  index.rst
fenics_build/: fenicsx_full  fenicsx_real
fenicsx/: build_fenicsx  fenicsx_full  fenicsx_python  real64  real64_python  requirements.txt
fenicsx_docker/: Dockerfile  fenicsx.yml
figs/: README
input/: .gitignore
input/APDL/: TFsector.ans  substress.ans
input/Assembly/: a1.csv  a2.csv  c1.csv  c2.csv  case1.csv  case2.csv  case3.csv  k0.csv  k1.csv  k2.csv  k4.csv  k6.csv  k7.csv  k8.csv  k9.csv  v3.csv  v3_br.csv  v3_bz.csv
input/ITER/: Sector_Module_#6_CCL_as-built_data_8NQVKS_v2_0.xlsx  Sector_Module_#6_CCL_as-built_data_8NQVKS_v2_1.xlsx  Sector_Module_#7_CCL_as-built_data_8NR9J7_v2_0.xlsx  Sector_Module_#7_CCL_as-built_data_8NR9J7_v2_1.xlsx  TFC1_CCL.txt
inputs/: .~lock.SN-A31-k165_Smoothed.xlsx#  SN-A31-k165.xlsx  SN-A31-k165_Smoothed.xlsx
nova/: .gitignore  DEMOxlsx.py  OCC_gen.py  __init__.py  __init__.pyi  _version.py  biot_savart.py  coil_cage.py  coil_class.py  coil_data.py  coil_frame.py  coil_matrix.py  coil_object.py  coil_set.py  coilclass.py  coils.py  coilset.py  config.py  cross_coil.py  default.mplstyle  definitions.py  elliptic.py  exceptions.py  finite_element.py  finite_inductance.py  firstwall.py  force.py  geqdsk.py  inductance.py  inverse.py  loops.py  mesh_grid.py  modules.py  plot_coilset.py  properties.py  pulsedesign.py.lprof  radial_build.py  sections.py  shape.py  shelf.py  (+6 more)
nova/DDD/: AnsysDD_sketch.py  DD_coils.py  DD_first_wall.py  DD_streamfunction.py  DD_volume_ratio.py  DDmove.py  DDplot.py  Ptools.py  RK_tmp.py  ansys_coils.py  beam_calc.py  coil_core.py  coil_dl.py  coil_force_vectors.py  coil_forces.py  coil_locations.py  connection3D.py  double_decker_radial_build.py  eqlib.py  export_sol.py  extract.py  feild_calc.py  force_swing.py  import_eqlib.py  in_plasma.py  load_eqlib.py  moveP6.py  plasma_coil_current.py  plasma_coils.py  plasma_contor.py  plasma_equlibrium.py  plasma_para.py  plasma_parameters.py  plasma_parameters_double.py  plasma_parameters_double2.py  plasma_shape.py  plot_force_swing.py  segments.py  shape_plasma.py  tmp_optimize.py  (+2 more)
nova/DINA/: ENP_current_slow_fast.py  ENP_discharge.py  ENP_plasma_movement.py  FDU.py  LTC_current.py  LTC_discharge.py  LTC_field.py  LTC_field_components.py  LTC_force.py  VDE_force.py  VS_force.py  Yuri_discharge.py  benchmark_Nova_LTC.py  capacitor_discharge.py  circuits.py  coil_flux.py  coil_force.py  coil_limits.py  compare_VS3_discharge.py  compare_VS3_force.py  compare_discharge_Nova.py  compare_vs3_transient.py  coupled_inductors.py  elm_discharge_xls.py  elm_eigen_decomposition.py  elm_flux.py  extract_vv_full.py  fit_tau.py  flux_state_trajectories.py  grid_waveforms.py  inductor_discharge.py  inductor_pair.py  load_scenario.py  md_flux_map.py  midplane_field.py  ode.py  old_vs3_flux.py  plot_Faxial_limits.py  plot_Fsep_limits.py  plot_current_limit.py  (+23 more)
nova/DTT/: GPlearn.py  GPpredict.py  RBconfig.py  SFcomp.py  SFswing.py  SX_force_sweep.py  SX_swing_contors.py  blackjack_build.py  bndry_rms.py  build.py  check_grad.py  check_json.py  coil_pair.py  compare_FW.py  compare_SX.py  compare_firstwalls.py  connection_plot.py  connection_profiles.py  connection_profiles_data_comp.py  divertor_rad.py  dtt_firstwall.py  eqConfig.py  eq_write.py  eqconfig_new.py  flux_functions.py  force_elliptic.py  frame_writer.py  inverse_power.py  lhc_test.py  load_eqdsk.py  load_eqdsk_tripple.py  load_history.py  load_negT_coil.py  moveSNcoils.py  moveSXcoils.py  moveSXcoils_051015.py  moveSXexcoils.py  moveXcoils.py  moveXcoils_old (2).py  moveXcoils_old.py  (+16 more)
nova/Eurofusion/: read_baseline.py
nova/ML/: LSTM_statless.py  wave_net.py
nova/SOFE/: DEMO_nTF.py  FE_coil.py  buildSF.py  buildSN.py  coil_sections.py  demo_coils_16_18.py  inverse_tmp.py  moveSXcoils.py  plot_opp.py  snap_coils.py  structure.py
nova/TF/: COIL.vi.TXT  SALOME.py  TFloop.py  (+21 more)
scripts/: 7.1.1.lua  fex.yml  imas_39.vi  startup.py  uda.sh  uda_cli.sh
tests/: _test_coilclass.py  _test_coilset.py  _test_dataframearray.py  _test_sultan.py  test_animate.py  test_arc.py  test_array.py  test_arrayloc.py  test_assembly.py  test_basis.py  test_biot_savart.py  test_biotarc.py  test_biotarray.py  test_biotframe.py  test_biotmatrix.py  test_biotoperate.py  test_biotsavart.py  test_biotsavart_3d.py  test_bokeh.py  test_callstate.py  test_codac_uda.py  test_coil.py  test_coilclass.py  test_coilframe.py  test_coilgrid.py  test_coilset.py  test_current.py  test_dataarray.py  test_database.py  test_dataframe.py  test_dataframearray.py  test_datasource.py  test_decompose.py  test_deferred.py  test_energize.py  test_extrapolate.py  test_ferritic.py  test_field.py  test_fieldnull.py  test_filepath.py  (+66 more)
(+1255 files in other folders)
